tests/positive/Parsing.juvix
module Parsing;

let' : Type;
let' := Type;

TypeMine : Type;
TypeMine := Type;
