tests/negative/LacksTypeSig.juvix
module LacksTypeSig;

 some := Type;


end;
